--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <script src="//at.alicdn.com/t/c/font_3835886_opgxrli293g.js"></script>
     <title>创码网-题库 | 讨论 | 小队 | 快来码上创造吧！</title>
   </head>
   <body>
