--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <script src="//at.alicdn.com/t/c/font_3835886_opgxrli293g.js"></script>
-    <title>创码网-题库 | 讨论 | 小队 | 快来码上创造吧！</title>
+    <title>码上创新！</title>
   </head>
   <body>
     <div id="app"></div>
