个人中心-随机头像设置-自定义头像设置-头像上传后端开发

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <script src="https://at.alicdn.com/t/c/font_3835886_falllrijwkf.js"></script>
+    <script src="http://localhost:3000/HelloWorld.umd.js"></script>
     <title>码上创新！</title>
   </head>
   <body>
